force-app/main/default/objects/Advance__c/Advance__c.object-meta.xml
<CustomObject>
    <label>Advance</label>
    <nameField>
        <label>Advance #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>