force-app/main/default/objects/Advance__c/fields/Adjusted_Projection__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Projection__c</fullName>
    <description>Adjusted Projection of the Approved Advance Amount Funding Based On Probability. Used For Forecasting In Bridge.</description>
    <formula>Approved_Advance_Amount_Total__c * CASE( Probability__c ,&apos;N/A&apos;, 0.00,&apos;0%&apos;, 0.00,&apos;50%&apos;, 0.50, &apos;80%&apos;, 0.80, &apos;100%&apos;, 1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Adjusted Projection of the Approved Advance Amount Funding Based On Probability. Used For Forecasting In Bridge.</inlineHelpText>
    <label>Adjusted Projection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>