force-app/main/default/objects/Advance__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Advances</relationshipLabel>
    <relationshipName>Advances</relationshipName>
    <type>Lookup</type>
</CustomField>