force-app/main/default/objects/Advance__c/fields/Advance_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Advance_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advances5</relationshipName>
    <type>Lookup</type>
</CustomField>