force-app/main/default/objects/Advance__c/fields/Advance_and_Origination_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Advance_and_Origination_Fee_Subtotal__c</fullName>
    <description>Sum of the Advance Fee Subtotal and the Origination Fee Subtotal</description>
    <formula>Advance_Fee_Subtotal__c + Origination_Fee_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of the Advance Fee Subtotal and the Origination Fee Subtotal</inlineHelpText>
    <label>Advance and Origination Fee Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>