force-app/main/default/objects/Advance__c/fields/Advance_Approval_Name__c.field-meta.xml
<CustomField>
    <fullName>Advance_Approval_Name__c</fullName>
    <formula>Batch_Approval__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Approval Name</label>
    <type>Text</type>
</CustomField>