force-app/main/default/objects/Advance__c/fields/Advance_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Advance_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advances6</relationshipName>
    <type>Lookup</type>
</CustomField>