force-app/main/default/objects/Advance__c/fields/Advance_Details__c.field-meta.xml
<CustomField>
    <fullName>Advance_Details__c</fullName>
    <label>Advance Details</label>
    <type>TextArea</type>
</CustomField>