force-app/main/default/objects/Advance__c/fields/Advance_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Advance_Documents_Received__c</fullName>
    <description>Used by Bridge Post Closing</description>
    <label>Advance Documents Received</label>
    <type>Date</type>
</CustomField>