force-app/main/default/objects/Advance__c/fields/Advance_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_Adjustment__c</fullName>
    <label>Advance Fee Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>