force-app/main/default/objects/Advance__c/fields/Advance_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_Subtotal__c</fullName>
    <label>Advance Fee Subtotal</label>
    <summarizedField>Property_Advance__c.Advance_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>