force-app/main/default/objects/Advance__c/fields/Advance_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_Total__c</fullName>
    <formula>Advance_Fee_Subtotal__c + Advance_Fee_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>