force-app/main/default/objects/Advance__c/fields/Advance_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Advance_Group_Name__c</fullName>
    <label>Advance Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>