force-app/main/default/objects/Advance__c/fields/Advance_Num__c.field-meta.xml
<CustomField>
    <fullName>Advance_Num__c</fullName>
    <description>Number of this Advance</description>
    <label>Advance #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>