force-app/main/default/objects/Advance__c/fields/Advance_Number__c.field-meta.xml
<CustomField>
    <fullName>Advance_Number__c</fullName>
    <formula>VALUE(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>