force-app/main/default/objects/Advance__c/fields/Advance_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Advance_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who requested the Advance</description>
    <inlineHelpText>Contact who requested the Advance</inlineHelpText>
    <label>Advance Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advances as Requestor</relationshipLabel>
    <relationshipName>Advances_as_Requestor</relationshipName>
    <type>Lookup</type>
</CustomField>