force-app/main/default/objects/Advance__c/fields/After_Repair_Value_Total__c.field-meta.xml
<CustomField>
    <fullName>After_Repair_Value_Total__c</fullName>
    <label>After Repair Value Total</label>
    <summarizedField>Property_Advance__c.After_Repair_Value__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>