force-app/main/default/objects/Advance__c/fields/Aggregate_Advance_Fee_PreAdvance__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Advance_Fee_PreAdvance__c</fullName>
    <label>Aggregate Advance Fee PreAdvance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>