force-app/main/default/objects/Advance__c/fields/Aggregate_Funding__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Funding__c</fullName>
    <inlineHelpText>This is the total amount funded for the Loan that this Advance belongs to</inlineHelpText>
    <label>Total Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>