force-app/main/default/objects/Advance__c/fields/Aggregate_Payoffs__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Payoffs__c</fullName>
    <inlineHelpText>This is the total amount of Paid Off Properties for the Loan that this Advance belongs to</inlineHelpText>
    <label>Total Payoffs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>