force-app/main/default/objects/Advance__c/fields/Aggregate_Value_PreAdvance__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Value_PreAdvance__c</fullName>
    <label>Aggregate Value PreAdvance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>