force-app/main/default/objects/Advance__c/fields/Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <description>Used for Datatape Onboarding as Placeholder Only.</description>
    <inlineHelpText>Used for Datatape Onboarding as Placeholder Only.</inlineHelpText>
    <label>Amortization Term</label>
    <length>5</length>
    <type>Text</type>
</CustomField>