force-app/main/default/objects/Advance__c/fields/Application_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Total__c</fullName>
    <label>Application Fee Total</label>
    <summarizedField>Property_Advance__c.Application_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>