force-app/main/default/objects/Advance__c/fields/Appraisal_Fee_Netted__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Fee_Netted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Appraisal is included/excluded in the Net Wire Amount</description>
    <inlineHelpText>Indicates if the Appraisal is included/excluded in the Net Wire Amount</inlineHelpText>
    <label>Appraisal Fee Netted</label>
    <type>Checkbox</type>
</CustomField>