force-app/main/default/objects/Advance__c/fields/Approved_Advance_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Approved_Advance_Amount_Total__c</fullName>
    <label>Approved Advance Amount Total</label>
    <summarizedField>Property_Advance__c.Approved_Advance_Amount_Calc__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>