force-app/main/default/objects/Advance__c/fields/Approved_Renovation_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Approved_Renovation_Amount_Total__c</fullName>
    <description>This is the max amount that can be funded for the Renovation on all Properties in this Advance. This is not what will be funded on this Advance</description>
    <inlineHelpText>This is the max amount that can be funded for the Renovation on all Properties in this Advance. This is not what will be funded on this Advance</inlineHelpText>
    <label>Approved_Renovation_Amount_Total</label>
    <summarizedField>Property_Advance__c.Approved_Renovation_Holdback__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>