force-app/main/default/objects/Advance__c/fields/ARV_LTV_Total__c.field-meta.xml
<CustomField>
    <fullName>ARV_LTV_Total__c</fullName>
    <formula>Approved_Advance_Amount_Total__c /  After_Repair_Value_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARV LTV Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>