force-app/main/default/objects/Advance__c/fields/As_Is_LTV_Total__c.field-meta.xml
<CustomField>
    <fullName>As_Is_LTV_Total__c</fullName>
    <formula>Initial_Disbursement_Total__c / BPO_Appraisal_Value_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>As-Is LTV Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>