force-app/main/default/objects/Advance__c/fields/Asset_Maturity_Days__c.field-meta.xml
<CustomField>
    <fullName>Asset_Maturity_Days__c</fullName>
    <formula>TEXT(Deal__r.Asset_Maturity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Maturity Days</label>
    <type>Text</type>
</CustomField>