force-app/main/default/objects/Advance__c/fields/Batch_Approval__c.field-meta.xml
<CustomField>
    <fullName>Batch_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Approval</label>
    <referenceTo>Batch_Approval__c</referenceTo>
    <relationshipLabel>Advances</relationshipLabel>
    <relationshipName>Advances</relationshipName>
    <type>Lookup</type>
</CustomField>