force-app/main/default/objects/Advance__c/fields/BlackSquare_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>BlackSquare_Fee_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Changes the label from blacksquare fee to onboarding Fee.</inlineHelpText>
    <label>Onboarding Fee Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>