force-app/main/default/objects/Advance__c/fields/BlackSquare_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>BlackSquare_Fee_Subtotal__c</fullName>
    <label>BlackSquare_Fee_Subtotal</label>
    <summarizedField>Property_Advance__c.BlackSquare_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>