force-app/main/default/objects/Advance__c/fields/BlackSquare_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>BlackSquare_Fee_Total__c</fullName>
    <formula>BlackSquare_Fee_Subtotal__c + BlackSquare_Fee_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>