force-app/main/default/objects/Advance__c/fields/Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name__c</fullName>
    <formula>HYPERLINK(&apos;/one/one.app?source=aloha#/sObject/&apos; +  Deal__r.Borrower_Entity__c  + &apos;/view&apos;,  Deal__r.Borrower_Entity__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower Name</label>
    <type>Text</type>
</CustomField>