force-app/main/default/objects/Advance__c/fields/Borrower_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name_Text__c</fullName>
    <formula>Deal__r.Borrower_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower Name Text</label>
    <type>Text</type>
</CustomField>