force-app/main/default/objects/Advance__c/fields/Borrower_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_Email__c</fullName>
    <formula>Deal__r.Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email of the Primary Contact on the Deal</inlineHelpText>
    <label>Primary Contact&apos;s Email</label>
    <type>Text</type>
</CustomField>