force-app/main/default/objects/Advance__c/fields/BPO_Appraisal_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Fee_Adjustment__c</fullName>
    <label>Appraisal Fee Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>