force-app/main/default/objects/Advance__c/fields/BPO_Appraisal_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Fee_Subtotal__c</fullName>
    <label>BPO Appraisal Fee Subtotal</label>
    <summarizedField>Property_Advance__c.BPO_Appraisal_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>