force-app/main/default/objects/Advance__c/fields/BPO_Appraisal_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Fee_Total__c</fullName>
    <formula>BPO_Appraisal_Fee_Subtotal__c + BPO_Appraisal_Fee_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPO Appraisal Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>