force-app/main/default/objects/Advance__c/fields/BPO_Appraisal_Value_Total__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Value_Total__c</fullName>
    <label>Appraisal Value Total</label>
    <summarizedField>Property_Advance__c.BPO_Appraisal_Value__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>