force-app/main/default/objects/Advance__c/fields/Broker_Advance_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Broker_Advance_Fee_Subtotal__c</fullName>
    <description>Bridge Use</description>
    <label>Broker Advance Fee Subtotal</label>
    <summarizedField>Property_Advance__c.Broker_Advance_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>