force-app/main/default/objects/Advance__c/fields/Broker_Fee_Paid_When__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee_Paid_When__c</fullName>
    <label>Broker Fee Paid When</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Fee_Paid_When</valueSetName>
    </valueSet>
</CustomField>