force-app/main/default/objects/Advance__c/fields/Capital_Partner__c.field-meta.xml
<CustomField>
    <fullName>Capital_Partner__c</fullName>
    <description>Investor that purchased this Loan</description>
    <formula>Deal__r.Sold_Loan_Pool__r.Sold_To__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Investor that purchased this Loan</inlineHelpText>
    <label>Capital Partner</label>
    <type>Text</type>
</CustomField>