force-app/main/default/objects/Advance__c/fields/Capital_Partner_Release__c.field-meta.xml
<CustomField>
    <fullName>Capital_Partner_Release__c</fullName>
    <label>Capital Partner Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>