force-app/main/default/objects/Advance__c/fields/Closing_Funds_Checked_By__c.field-meta.xml
<CustomField>
    <fullName>Closing_Funds_Checked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Funds Checked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advances</relationshipName>
    <type>Lookup</type>
</CustomField>