force-app/main/default/objects/Advance__c/fields/Closing_Funds_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Closing_Funds_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closing Funds Checklist</label>
    <type>Checkbox</type>
</CustomField>