force-app/main/default/objects/Advance__c/fields/Closing_Funds_Checklist_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Funds_Checklist_Comments__c</fullName>
    <label>Closing Funds Checklist Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>