force-app/main/default/objects/Advance__c/fields/Closing_Funds_Checklist_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Funds_Checklist_Date__c</fullName>
    <label>Closing Funds Checklist Date</label>
    <type>DateTime</type>
</CustomField>