force-app/main/default/objects/Advance__c/fields/Commission_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Commission_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will trigger the Commission creation</description>
    <inlineHelpText>This will trigger the Commission creation</inlineHelpText>
    <label>Commission Trigger</label>
    <type>Checkbox</type>
</CustomField>