force-app/main/default/objects/Advance__c/fields/Current_UPB__c.field-meta.xml
<CustomField>
    <fullName>Current_UPB__c</fullName>
    <formula>Deal__r.Current_UPB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current UPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>