force-app/main/default/objects/Advance__c/fields/Current_UPB_Interest_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Current_UPB_Interest_Reserve__c</fullName>
    <formula>Deal__r.Current_UPB_Interest_Reserves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current UPB + Interest Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>