force-app/main/default/objects/Advance__c/fields/Daily_Interest_Rate_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Rate_Subtotal__c</fullName>
    <description>This is the sum of the Daily Interest Rate Total from the Property Advance record.  This is being rolled up by Apex.</description>
    <label>Daily Interest Rate Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>