force-app/main/default/objects/Advance__c/fields/Daily_Interest_Rate_Total__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Rate_Total__c</fullName>
    <formula>Daily_Interest_Rate_Subtotal__c + Daily_Interest_Rate_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Interest Rate Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>