force-app/main/default/objects/Advance__c/fields/Date_Advance_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Advance_Requested__c</fullName>
    <description>Date that the Borrower requested construction funding</description>
    <inlineHelpText>Date that the Borrower requested construction funding</inlineHelpText>
    <label>Date Advance Requested</label>
    <type>Date</type>
</CustomField>