force-app/main/default/objects/Advance__c/fields/Date_Inspection_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Inspection_Ordered__c</fullName>
    <label>Date Inspection Ordered</label>
    <type>Date</type>
</CustomField>