force-app/main/default/objects/Advance__c/fields/Date_Inspection_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Inspection_Report_Received__c</fullName>
    <label>Date Inspection Report Received</label>
    <type>Date</type>
</CustomField>