force-app/main/default/objects/Advance__c/fields/Date_Of_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Inspection__c</fullName>
    <label>Date Of Inspection</label>
    <type>Date</type>
</CustomField>