force-app/main/default/objects/Advance__c/fields/Days_Pending__c.field-meta.xml
<CustomField>
    <fullName>Days_Pending__c</fullName>
    <description>If this Advance is Completed, then this will reflect days from creation to wire date.  If Pending, then days from creation to today&apos;s date.</description>
    <formula>IF( ISPICKVAL( Status__c , &apos;Completed&apos;) , Wire_Date__c - DATEVALUE( CreatedDate ),
IF( ISPICKVAL( Status__c , &apos;Cancelled&apos;) , NULL,
TODAY()  -  DATEVALUE( CreatedDate )
))</formula>
    <inlineHelpText>If this Advance is Completed, then this will reflect days from creation to wire date.  If Pending, then days from creation to today&apos;s date.</inlineHelpText>
    <label>Days Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>