force-app/main/default/objects/Advance__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <formula>Deal__r.Days_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>