force-app/main/default/objects/Advance__c/fields/Days_to_Fund__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Fund__c</fullName>
    <description>Number of days between Date Advance Requested and the Wire Date</description>
    <formula>Wire_Date__c - Date_Advance_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between Date Advance Requested and the Wire Date</inlineHelpText>
    <label>Days to Fund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>