force-app/main/default/objects/Advance__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Advances</relationshipLabel>
    <relationshipName>Advances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>