force-app/main/default/objects/Advance__c/fields/Deal_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Deal_RecordType__c</fullName>
    <description>Record Type Developer Name from the related Deal</description>
    <formula>Deal__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record Type Developer Name from the related Deal</inlineHelpText>
    <label>Deal Record Type Developer Name</label>
    <type>Text</type>
</CustomField>