force-app/main/default/objects/Advance__c/fields/Deal_Total_Holdback__c.field-meta.xml
<CustomField>
    <fullName>Deal_Total_Holdback__c</fullName>
    <description>Not Used</description>
    <formula>TEXT( Deal__r.Rehab_Holdback_Limit__c*100 ) + &apos;% (&apos; + IF( Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp; 
IF(ABS(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c) &gt;= 1000000, TEXT(FLOOR(ABS(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(ABS(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ABS(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c))), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(ABS(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c) , 1), 2) * 100, 99))) &amp; 
IF(Deal__r.Holdback__c /Deal__r.Rehab_Holdback_Limit__c &lt; 0, &quot;)&quot;, &quot;&quot;) + 
&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Total Holdback</label>
    <type>Text</type>
</CustomField>